fix gap in screenSplit

--- a/frontend/modulecrediting/src/assets/mixins.scss
+++ b/frontend/modulecrediting/src/assets/mixins.scss
@@ -46,6 +46,7 @@
   gap: 0.625rem;
 }
 
+
 @mixin panelComponent() {
   width: 100%;
   padding: 0.625rem 0rem;
@@ -61,7 +62,7 @@
 @mixin screenSplit() {
   display: flex;
   align-items: flex-start;
-  gap: 1.875rem;
+  gap: 0.9735rem;
 }
 
 @mixin rightArrow() {
